[project]
name = "earlywarn"
version = "0.1.0"
description = "Act before it's too late with these Early Event Prediction methods. Applicable to Predictive Maintenance, Medicine, Finance, and so on."
authors = [
    {name = "JoffreyMa",email = "joffrey.ma@janvier-ai.co"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pytest (>=9.0.0,<10.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "aeon (>=1.3.0,<2.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "typer-config (>=1.4.3,<2.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
